2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd

	* src/app.h:
	* src/main.c: (main): Remove the BtctlController, and move it
	into the chooser widget

	* src/phonemgr-chooser-button.*:
	* ui/phonemgr.glade: Add a new chooser widget, and use it

	* src/gconf-bridge.*:
	* src/ui.c: (set_dependent_widget), (populate_prefs),
	(apply_prefs), (prefs_dialog_response), (ui_init):
	Simplify the code, using GConfBridge to bind toggle buttons
	and GConf keys, use GConfBridge to bind the new Bluetooth
	chooser button as well, try to bring as close as possible to
	instant-apply (still flaky) on reconnects

	* src/connection.c: (set_connection_device): Simplify
	set_connection_device(), remove unneeded define

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/ui.c: (get_current_btname), (populate_prefs), (apply_prefs):
	Avoid GConf errors when the bdaddr is empty (non-NULL)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/app.h:
	* ui/Makefile.am:
	* ui/gnome-phone-manager.schemas.in: Add a schemas file,
	remove the /prefs subdir to gnome-phone-manager GConf entries,
	it's all prefs anyway (Closes: #455841)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_popup_menu_cb):
	* src/ui.c: (apply_prefs), (prefs_dialog_response), (ui_init),
	(ui_hide), (show_prefs_window):
	* ui/phonemgr.glade: Patch from Christian Persch <chpe@gnome.org>
	to make the preferences dialogue a GtkDialog instead of a window,
	and fix some spacing issues (Closes: #455869)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require a newer gnome-bluetooth to get a fixed
	pkgconfig file for libgnomeui includes
	add GStreamer dependency to play our sound alert

	* libgsm/Makefile.am:
	* libgsm/gnokii-identify.c: Removed, deprecated by the --identify
	switch in gnome-phone-manager

	* src/menu.c: (about_activated), (construct_menu): Port to GtkAbout,
	use Gtk stock icons instead of GNOME ones
